# symfony-http3

./: .dockerignore  .gitignore  .gitmodules  README.md  docker-compose.yaml
gateway/: Cargo.toml  Dockerfile
gateway/src/: http_server.rs  main.rs  webtransport_server.rs
scripts/: gen_dev_certs.sh
symfony/: .dockerignore  .env  .env.dev  Dockerfile  composer.json
symfony/config/: bundles.php  reference.php  routes.yaml  services.yaml
symfony/public/: index.php
symfony/public/demo/: demo.js  webtransport.js
symfony/src/Controller/: DemoController.php  GatewayController.php  GatewayEventsController.php  InternalEventsController.php  PingController.php  WebTransportDemoController.php
symfony/src/Event/: GatewayEventNames.php  GatewayWebhookEvent.php
symfony/src/EventSubscriber/: GatewayEventSubscriber.php
symfony/src/Service/: WebTransportCertPinning.php
symfony/templates/demo/: webtransport.html.twig
